[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.0901961, 0.690196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="."]
anchor_right = 0.263
anchor_bottom = 0.065
margin_left = 359.0
margin_top = 142.0
margin_right = 371.0
margin_bottom = 162.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="istructions" type="Button" parent="."]
anchor_right = 0.263
anchor_bottom = 0.065
margin_left = 362.0
margin_top = 238.0
margin_right = 374.0
margin_bottom = 258.0
text = "istructions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="."]
anchor_right = 0.263
anchor_bottom = 0.065
margin_left = 363.0
margin_top = 349.0
margin_right = 375.0
margin_bottom = 369.0
text = "credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="istructions_text" type="WindowDialog" parent="."]
margin_left = 258.801
margin_top = 167.35
margin_right = 720.801
margin_bottom = 388.35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="istructions_text"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "asdddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits_text" type="WindowDialog" parent="."]
margin_left = 258.801
margin_top = 167.35
margin_right = 720.801
margin_bottom = 388.35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="credits_text"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.108
anchor_right = 0.2
anchor_bottom = 0.129
rect_scale = Vector2( 5, 5 )
text = "Title"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="istructions" to="." method="_on_istructions_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
